[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/upgrades/marco.png" type="Texture" id=1]
[ext_resource path="res://assets/camaras/camara_3.png" type="Texture" id=2]
[ext_resource path="res://assets/comidas/comida_2.png" type="Texture" id=3]
[ext_resource path="res://assets/camaras/camara_2.png" type="Texture" id=4]
[ext_resource path="res://assets/lapices/lapiz_6.png" type="Texture" id=5]
[ext_resource path="res://assets/comidas/comida_3.png" type="Texture" id=6]
[ext_resource path="res://assets/compus/compu_4.png" type="Texture" id=7]
[ext_resource path="res://assets/compus/compu_3.png" type="Texture" id=8]
[ext_resource path="res://assets/camaras/camara_sauron.png" type="Texture" id=9]
[ext_resource path="res://assets/compus/compu_2.png" type="Texture" id=10]
[ext_resource path="res://assets/compus/compu_5.png" type="Texture" id=11]
[ext_resource path="res://assets/compus/compu_6.png" type="Texture" id=12]
[ext_resource path="res://assets/mails/mail_2.png" type="Texture" id=13]
[ext_resource path="res://assets/mails/mail_3.png" type="Texture" id=14]
[ext_resource path="res://assets/upgrades/sombreado.png" type="Texture" id=15]
[ext_resource path="res://assets/lapices/lapiz_2.png" type="Texture" id=16]
[ext_resource path="res://assets/lapices/lapiz_4.png" type="Texture" id=17]
[ext_resource path="res://assets/lapices/lapiz_5.png" type="Texture" id=18]
[ext_resource path="res://assets/lapices/lapiz_3.png" type="Texture" id=19]
[ext_resource path="res://src/UpgradeClick.gd" type="Script" id=20]
[ext_resource path="res://assets/comidas/comida_5.png" type="Texture" id=21]
[ext_resource path="res://assets/comidas/comida_4.png" type="Texture" id=22]
[ext_resource path="res://assets/preceptores/miguel_4.png" type="Texture" id=23]
[ext_resource path="res://assets/preceptores/miguel_2.png" type="Texture" id=24]
[ext_resource path="res://assets/preceptores/miguel_3.png" type="Texture" id=25]
[ext_resource path="res://assets/celulares/phone_3.png" type="Texture" id=26]
[ext_resource path="res://assets/celulares/phone_4.png" type="Texture" id=27]
[ext_resource path="res://assets/celulares/phone_5.png" type="Texture" id=28]
[ext_resource path="res://assets/celulares/phone_6.png" type="Texture" id=29]
[ext_resource path="res://assets/celulares/phone_2.png" type="Texture" id=30]

[node name="Upgrades" type="GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
columns = 5
script = ExtResource( 20 )

[node name="Click1" type="TextureButton" parent="."]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Click1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 16 )

[node name="Shadow" type="NinePatchRect" parent="Click1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Click2" type="TextureButton" parent="."]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Click2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Click2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Click3" type="TextureButton" parent="."]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Click3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Click3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Click4" type="TextureButton" parent="."]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Click4"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Click4"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Click5" type="TextureButton" parent="."]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Click5"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 5 )

[node name="Shadow" type="NinePatchRect" parent="Click5"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Computadora1" type="TextureButton" parent="."]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Computadora1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 10 )

[node name="Shadow" type="NinePatchRect" parent="Computadora1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Computadora2" type="TextureButton" parent="."]
margin_left = 68.0
margin_top = 68.0
margin_right = 132.0
margin_bottom = 132.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Computadora2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Computadora2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Computadora3" type="TextureButton" parent="."]
margin_left = 136.0
margin_top = 68.0
margin_right = 200.0
margin_bottom = 132.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Computadora3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Computadora3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Computadora4" type="TextureButton" parent="."]
margin_left = 204.0
margin_top = 68.0
margin_right = 268.0
margin_bottom = 132.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Computadora4"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Computadora4"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Computadora5" type="TextureButton" parent="."]
margin_left = 272.0
margin_top = 68.0
margin_right = 336.0
margin_bottom = 132.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Computadora5"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 12 )

[node name="Shadow" type="NinePatchRect" parent="Computadora5"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Celular1" type="TextureButton" parent="."]
margin_top = 136.0
margin_right = 64.0
margin_bottom = 200.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Celular1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 30 )

[node name="Shadow" type="NinePatchRect" parent="Celular1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Celular2" type="TextureButton" parent="."]
margin_left = 68.0
margin_top = 136.0
margin_right = 132.0
margin_bottom = 200.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Celular2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Celular2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Celular3" type="TextureButton" parent="."]
margin_left = 136.0
margin_top = 136.0
margin_right = 200.0
margin_bottom = 200.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Celular3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Celular3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Celular4" type="TextureButton" parent="."]
margin_left = 204.0
margin_top = 136.0
margin_right = 268.0
margin_bottom = 200.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Celular4"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 28 )

[node name="Shadow" type="NinePatchRect" parent="Celular4"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Celular5" type="TextureButton" parent="."]
margin_left = 272.0
margin_top = 136.0
margin_right = 336.0
margin_bottom = 200.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Celular5"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Celular5"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Comida1" type="TextureButton" parent="."]
margin_top = 204.0
margin_right = 64.0
margin_bottom = 268.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Comida1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 3 )

[node name="Shadow" type="NinePatchRect" parent="Comida1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Comida2" type="TextureButton" parent="."]
margin_left = 68.0
margin_top = 204.0
margin_right = 132.0
margin_bottom = 268.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Comida2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Comida2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Comida3" type="TextureButton" parent="."]
margin_left = 136.0
margin_top = 204.0
margin_right = 200.0
margin_bottom = 268.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Comida3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 22 )

[node name="Shadow" type="NinePatchRect" parent="Comida3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Comida4" type="TextureButton" parent="."]
margin_left = 204.0
margin_top = 204.0
margin_right = 268.0
margin_bottom = 268.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Comida4"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 21 )

[node name="Shadow" type="NinePatchRect" parent="Comida4"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Camara1" type="TextureButton" parent="."]
margin_left = 272.0
margin_top = 204.0
margin_right = 336.0
margin_bottom = 268.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Camara1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 4 )

[node name="Shadow" type="NinePatchRect" parent="Camara1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Camara2" type="TextureButton" parent="."]
margin_top = 272.0
margin_right = 64.0
margin_bottom = 336.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Camara2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Camara2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Camara3" type="TextureButton" parent="."]
margin_left = 68.0
margin_top = 272.0
margin_right = 132.0
margin_bottom = 336.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Camara3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Camara3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Mail1" type="TextureButton" parent="."]
margin_left = 136.0
margin_top = 272.0
margin_right = 200.0
margin_bottom = 336.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Mail1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 13 )

[node name="Shadow" type="NinePatchRect" parent="Mail1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Mail2" type="TextureButton" parent="."]
margin_left = 204.0
margin_top = 272.0
margin_right = 268.0
margin_bottom = 336.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Mail2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Mail2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Preceptor1" type="TextureButton" parent="."]
margin_left = 272.0
margin_top = 272.0
margin_right = 336.0
margin_bottom = 336.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Preceptor1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Preceptor1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Preceptor2" type="TextureButton" parent="."]
margin_top = 340.0
margin_right = 64.0
margin_bottom = 404.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Preceptor2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 25 )

[node name="Shadow" type="NinePatchRect" parent="Preceptor2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )

[node name="Preceptor3" type="TextureButton" parent="."]
margin_left = 68.0
margin_top = 340.0
margin_right = 132.0
margin_bottom = 404.0
texture_normal = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="Preceptor3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Shadow" type="NinePatchRect" parent="Preceptor3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 61.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="mouse_entered" from="Click1" to="." method="_on_Click1_mouse_entered"]
[connection signal="mouse_exited" from="Click1" to="." method="_on_Click1_mouse_exited"]
[connection signal="pressed" from="Click1" to="." method="_on_Click1_pressed"]
[connection signal="mouse_entered" from="Click2" to="." method="_on_Click2_mouse_entered"]
[connection signal="mouse_exited" from="Click2" to="." method="_on_Click2_mouse_exited"]
[connection signal="pressed" from="Click2" to="." method="_on_Click2_pressed"]
[connection signal="mouse_entered" from="Click3" to="." method="_on_Click3_mouse_entered"]
[connection signal="mouse_exited" from="Click3" to="." method="_on_Click3_mouse_exited"]
[connection signal="pressed" from="Click3" to="." method="_on_Click3_pressed"]
[connection signal="mouse_entered" from="Click4" to="." method="_on_Click4_mouse_entered"]
[connection signal="mouse_exited" from="Click4" to="." method="_on_Click4_mouse_exited"]
[connection signal="pressed" from="Click4" to="." method="_on_Click4_pressed"]
[connection signal="mouse_entered" from="Click5" to="." method="_on_Click5_mouse_entered"]
[connection signal="mouse_exited" from="Click5" to="." method="_on_Click5_mouse_exited"]
[connection signal="pressed" from="Click5" to="." method="_on_Click5_pressed"]
[connection signal="mouse_entered" from="Computadora1" to="." method="_on_Computadora1_mouse_entered"]
[connection signal="mouse_exited" from="Computadora1" to="." method="_on_Computadora1_mouse_exited"]
[connection signal="pressed" from="Computadora1" to="." method="_on_Computadora1_pressed"]
[connection signal="mouse_entered" from="Computadora2" to="." method="_on_Computadora2_mouse_entered"]
[connection signal="mouse_exited" from="Computadora2" to="." method="_on_Computadora2_mouse_exited"]
[connection signal="pressed" from="Computadora2" to="." method="_on_Computadora2_pressed"]
[connection signal="mouse_entered" from="Computadora3" to="." method="_on_Computadora3_mouse_entered"]
[connection signal="mouse_exited" from="Computadora3" to="." method="_on_Computadora3_mouse_exited"]
[connection signal="pressed" from="Computadora3" to="." method="_on_Computadora3_pressed"]
[connection signal="mouse_entered" from="Computadora4" to="." method="_on_Computadora4_mouse_entered"]
[connection signal="mouse_exited" from="Computadora4" to="." method="_on_Computadora4_mouse_exited"]
[connection signal="pressed" from="Computadora4" to="." method="_on_Computadora4_pressed"]
[connection signal="mouse_entered" from="Computadora5" to="." method="_on_Computadora5_mouse_entered"]
[connection signal="mouse_exited" from="Computadora5" to="." method="_on_Computadora5_mouse_exited"]
[connection signal="pressed" from="Computadora5" to="." method="_on_Computadora5_pressed"]
[connection signal="mouse_entered" from="Celular1" to="." method="_on_Celular1_mouse_entered"]
[connection signal="mouse_exited" from="Celular1" to="." method="_on_Celular1_mouse_exited"]
[connection signal="pressed" from="Celular1" to="." method="_on_Celular1_pressed"]
[connection signal="mouse_entered" from="Celular2" to="." method="_on_Celular2_mouse_entered"]
[connection signal="mouse_exited" from="Celular2" to="." method="_on_Celular2_mouse_exited"]
[connection signal="pressed" from="Celular2" to="." method="_on_Celular2_pressed"]
[connection signal="mouse_entered" from="Celular3" to="." method="_on_Celular3_mouse_entered"]
[connection signal="mouse_exited" from="Celular3" to="." method="_on_Celular3_mouse_exited"]
[connection signal="pressed" from="Celular3" to="." method="_on_Celular3_pressed"]
[connection signal="mouse_entered" from="Celular4" to="." method="_on_Celular4_mouse_entered"]
[connection signal="mouse_exited" from="Celular4" to="." method="_on_Celular4_mouse_exited"]
[connection signal="pressed" from="Celular4" to="." method="_on_Celular4_pressed"]
[connection signal="mouse_entered" from="Celular5" to="." method="_on_Celular5_mouse_entered"]
[connection signal="mouse_exited" from="Celular5" to="." method="_on_Celular5_mouse_exited"]
[connection signal="pressed" from="Celular5" to="." method="_on_Celular5_pressed"]
[connection signal="mouse_entered" from="Comida1" to="." method="_on_Comida1_mouse_entered"]
[connection signal="mouse_exited" from="Comida1" to="." method="_on_Comida1_mouse_exited"]
[connection signal="pressed" from="Comida1" to="." method="_on_Comida1_pressed"]
[connection signal="mouse_entered" from="Comida2" to="." method="_on_Comida2_mouse_entered"]
[connection signal="mouse_exited" from="Comida2" to="." method="_on_Comida2_mouse_exited"]
[connection signal="pressed" from="Comida2" to="." method="_on_Comida2_pressed"]
[connection signal="mouse_entered" from="Comida3" to="." method="_on_Comida3_mouse_entered"]
[connection signal="mouse_exited" from="Comida3" to="." method="_on_Comida3_mouse_exited"]
[connection signal="pressed" from="Comida3" to="." method="_on_Comida3_pressed"]
[connection signal="mouse_entered" from="Comida4" to="." method="_on_Comida4_mouse_entered"]
[connection signal="mouse_exited" from="Comida4" to="." method="_on_Comida4_mouse_exited"]
[connection signal="pressed" from="Comida4" to="." method="_on_Comida4_pressed"]
[connection signal="mouse_entered" from="Camara1" to="." method="_on_Camara1_mouse_entered"]
[connection signal="mouse_exited" from="Camara1" to="." method="_on_Camara1_mouse_exited"]
[connection signal="pressed" from="Camara1" to="." method="_on_Camara1_pressed"]
[connection signal="mouse_entered" from="Camara2" to="." method="_on_Camara2_mouse_entered"]
[connection signal="mouse_exited" from="Camara2" to="." method="_on_Camara2_mouse_exited"]
[connection signal="pressed" from="Camara2" to="." method="_on_Camara2_pressed"]
[connection signal="mouse_entered" from="Camara3" to="." method="_on_Camara3_mouse_entered"]
[connection signal="mouse_exited" from="Camara3" to="." method="_on_Camara3_mouse_exited"]
[connection signal="pressed" from="Camara3" to="." method="_on_Camara3_pressed"]
[connection signal="mouse_entered" from="Mail1" to="." method="_on_Mail1_mouse_entered"]
[connection signal="mouse_exited" from="Mail1" to="." method="_on_Mail1_mouse_exited"]
[connection signal="pressed" from="Mail1" to="." method="_on_Mail1_pressed"]
[connection signal="mouse_entered" from="Mail2" to="." method="_on_Mail2_mouse_entered"]
[connection signal="mouse_exited" from="Mail2" to="." method="_on_Mail2_mouse_exited"]
[connection signal="pressed" from="Mail2" to="." method="_on_Mail2_pressed"]
[connection signal="mouse_entered" from="Preceptor1" to="." method="_on_Preceptor1_mouse_entered"]
[connection signal="mouse_exited" from="Preceptor1" to="." method="_on_Preceptor1_mouse_exited"]
[connection signal="pressed" from="Preceptor1" to="." method="_on_Preceptor1_pressed"]
[connection signal="mouse_entered" from="Preceptor2" to="." method="_on_Preceptor2_mouse_entered"]
[connection signal="mouse_exited" from="Preceptor2" to="." method="_on_Preceptor2_mouse_exited"]
[connection signal="pressed" from="Preceptor2" to="." method="_on_Preceptor2_pressed"]
[connection signal="mouse_entered" from="Preceptor3" to="." method="_on_Preceptor3_mouse_entered"]
[connection signal="mouse_exited" from="Preceptor3" to="." method="_on_Preceptor3_mouse_exited"]
[connection signal="pressed" from="Preceptor3" to="." method="_on_Preceptor3_pressed"]
